--- a/fullstack_template/static/home.css
+++ b/fullstack_template/static/home.css
@@ -3,9 +3,13 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 
+p {
+	font-size: 16px;
+}
+
 .page {
 	display: grid;
-	grid-template-columns: 200px auto;
+	grid-template-columns: 180px auto;
 }
 
 .me {
@@ -14,9 +18,18 @@ body {
 	grid-column: 1;
 	background-color: #545454;
 	color: white;
+	height: 100vh;
+	align-items: center;
+	padding-top: 20px;
+}
+
+.profile {
+	justify-self: center;
+	width: 150px;
 }
 
 .list {
 	grid-column: 2;
 	padding-top: 20px;
+	padding-left: 20px;
 }
