--- a/fullstack_template/static/index.css
+++ b/fullstack_template/static/index.css
@@ -20,6 +20,7 @@ body {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+	margin-bottom: 0px;
 }
 
 p {
@@ -35,6 +36,7 @@ p {
 }
 
 .button {
+	margin-top: -20px;
 	color: #FFD301;
 	padding-top: 0;
 	font-size: 40px;
