--- a/fullstack_template/static/home.css
+++ b/fullstack_template/static/home.css
@@ -3,6 +3,10 @@ body {
 	font-family: 'Open Sans', sans-serif;
 }
 
+h2 {
+	font-weight: bold;
+}
+
 p {
 	font-size: 16px;
 }
@@ -18,7 +22,7 @@ p {
 	grid-column: 1;
 	background-color: #545454;
 	color: white;
-	height: 100vh;
+	min-height: 100vh;
 	align-items: center;
 	padding-top: 20px;
 }
@@ -32,4 +36,26 @@ p {
 	grid-column: 2;
 	padding-top: 20px;
 	padding-left: 20px;
+	display: flex;
+	flex-wrap: wrap;
+
+}
+
+.user {
+	background-color: #F5F5F5;
+	width: 280px;
+	border-radius: 35px;
+	height: 350px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin: 20px 20px;
+}
+
+.userProfile {
+	justify-self: center;
+	width: 150px;
+	display: block;
+	margin: 0 auto;
 }
